--- a/源码版/tuisong/config.json
+++ b/源码版/tuisong/config.json
@@ -1,1 +1,20 @@
-{"app_id": "", "app_secret": "", "template_id": "", "user": ["", ""], "province": "", "city": "", "birthday1": "", "birthday2": "", "birthday3": "1997-01-03", "love_date": "", "Whether_Eng": "", "Whether_caihongpi": false, "Whether_lizhi": false, "Whether_tip": false, "Whether_health": false, "Whether_lucky": false, "tianxing_API": "", "astro": ""}
+{
+    "app_id": "wx5430bf8a1bd14210",
+    "app_secret": "0dab8af22e064f3f3e23b456f2675aca",
+    "template_id": "",
+    "user": [
+        "oBNF-6Sz09Fy86K9P2LUq9UvSSxY" ,
+    ],
+    "province": "浙江",
+    "city": "金华",
+    "birthday1": "1998-10-28",
+    "love_date": "2022-01-19",
+    "Whether_Eng": "",
+    "Whether_caihongpi": false,
+    "Whether_lizhi": false,
+    "Whether_tip": false,
+    "Whether_health": true,
+    "Whether_lucky": true,
+    "tianxing_API": "",
+    "astro": ""
+}
