--- a/源码版/tuisong/config.json
+++ b/源码版/tuisong/config.json
@@ -6,15 +6,15 @@
         "oBNF-6Sz09Fy86K9P2LUq9UvSSxY" ,
     ],
     "province": "浙江",
-    "city": "金华",
+    "city": "兰溪",
     "birthday1": "1998-10-28",
     "love_date": "2022-01-19",
-    "Whether_Eng": "",
-    "Whether_caihongpi": false,
-    "Whether_lizhi": false,
-    "Whether_tip": false,
+    "Whether_Eng": true,
+    "Whether_caihongpi": true,
+    "Whether_lizhi": true,
+    "Whether_tip": true,
     "Whether_health": true,
     "Whether_lucky": true,
-    "tianxing_API": "",
-    "astro": ""
+    "tianxing_API": "1333db493976bc43dd71a8efb5b61548",
+    "astro": "scorpio",  
 }
