--- a/源码版/tuisong/config.json
+++ b/源码版/tuisong/config.json
@@ -1,7 +1,7 @@
 {
     "app_id": "wx5430bf8a1bd14210",
     "app_secret": "0dab8af22e064f3f3e23b456f2675aca",
-    "template_id": "",
+    "template_id": "-3vGkJIt2mjGovfRX0GVdngAQnHarTjvKTDTn3SqgxM",
     "user": [
         "oBNF-6Sz09Fy86K9P2LUq9UvSSxY" ,
     ],
