--- a/源码版/tuisong/config.json
+++ b/源码版/tuisong/config.json
@@ -1,7 +1,7 @@
 {
     "app_id": "wx5430bf8a1bd14210",
     "app_secret": "0dab8af22e064f3f3e23b456f2675aca",
-    "template_id": "-3vGkJIt2mjGovfRX0GVdngAQnHarTjvKTDTn3SqgxM",
+    "template_id": "4OGVC3YB_mfxEpp-NGvDpiGudHMPXAW1aJ3gkj_85tE",
     "user": [
         "oBNF-6Sz09Fy86K9P2LUq9UvSSxY" ,
     ],
@@ -17,4 +17,5 @@
     "Whether_lucky": true,
     "tianxing_API": "1333db493976bc43dd71a8efb5b61548",
     "astro": "scorpio",  
+    "menses_date", "2022-09-23",
 }
