--- a/源码版/tuisong/config.json
+++ b/源码版/tuisong/config.json
@@ -17,5 +17,5 @@
     "Whether_lucky": true,
     "tianxing_API": "1333db493976bc43dd71a8efb5b61548",
     "astro": "scorpio",  
-    "menses_date", "2022-09-23",
+    "menses_date": "2022-09-23",
 }
