--- a/源码版/tuisong/config.json
+++ b/源码版/tuisong/config.json
@@ -4,6 +4,7 @@
     "template_id": "nsb3ULDBbDAMFYvQXnAIPsc7BTxiud2AyvGUovoMFj0",
     "user": [
         "oBNF-6Sz09Fy86K9P2LUq9UvSSxY" ,
+        "oBNF-6VSBO-Ur4RJTbujN7M2K2Hs",
     ],
     "province": "浙江",
     "city": "兰溪",
