--- a/源码版/tuisong/config.json
+++ b/源码版/tuisong/config.json
@@ -6,8 +6,8 @@
         "oBNF-6Sz09Fy86K9P2LUq9UvSSxY" ,
         "oBNF-6VSBO-Ur4RJTbujN7M2K2Hs",
     ],
-    "province": "浙江",
-    "city": "兰溪",
+    "province": "上海",
+    "city": "上海",
     "birthday1": "1998-10-28",
     "love_date": "2022-01-19",
     "Whether_Eng": true,
